main/default/objects/Training_Track__c/fields/Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_URL__c</fullName>
    <inlineHelpText>URL for the image displayed in the training track detail header</inlineHelpText>
    <label>Background Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>