main/default/objects/Training_Track__c/fields/Enable_all_external_accounts__c.field-meta.xml
<CustomField>
    <fullName>Enable_all_external_accounts__c</fullName>
    <inlineHelpText>Enabling this checkbox will expose this training track to all external (Community/Portal) users</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Enable for all external accounts</label>
    <type>Checkbox</type>
</CustomField>