main/default/objects/Training_Track__c/fields/New_Until__c.field-meta.xml
<CustomField>
    <fullName>New_Until__c</fullName>
    <inlineHelpText>Display a New ribbon in the training track until the specified date</inlineHelpText>
    <label>New Until</label>
    <type>Date</type>
</CustomField>