main/default/objects/Training_Track__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Training tracks are not available to end users until they are &quot;Active&quot;</inlineHelpText>
    <label>Status</label>
    <picklist>
        <picklistValues>
            <fullName>Draft</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Active</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>